@@ -1,6 +1,7 @@
 2009-10-13
   - added ActiveHash::Base.has_many, which works with ActiveRecord or ActiveHash classes (thanks to baldwindavid)
   - added ActiveHash::Base.belongs_to, which works with ActiveRecord or ActiveHash classes (thanks to baldwindavid)
+  - added .delete_all method that clears the in-memory array
 
 2009-10-12
   - auto-assign fields after calling data= instead of after calling .all
